--- a/CookPopularTheme/CookPopularTheme.csproj
+++ b/CookPopularTheme/CookPopularTheme.csproj
@@ -6,4 +6,14 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\Images\CookCSharp.ico" />
+    <None Remove="Resources\Images\CookCSharp.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\CookCSharp.ico" />
+    <Resource Include="Resources\Images\CookCSharp.png" />
+  </ItemGroup>
+
 </Project>
