--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -1,25 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
-  <PropertyGroup>
-    <TargetFrameworks>net461;net5.0-windows</TargetFrameworks>
-    <UseWPF>true</UseWPF>
-    <UseWindowsForms>true</UseWindowsForms>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFrameworks>net461;net5.0-windows</TargetFrameworks>
+        <UseWPF>true</UseWPF>
+        <UseWindowsForms>true</UseWindowsForms>
+        <LangVersion>9.0</LangVersion>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Resources\Images\CookCSharp.ico" />
-    <None Remove="Resources\Images\CookCSharp.png" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Remove="Resources\Images\CookCSharp.ico" />
+        <None Remove="Resources\Images\CookCSharp.png" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Tools\" />
-    <Folder Include="Communal\" />
-    <Folder Include="Themes\" />
-  </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Communal\" />
+        <Folder Include="Themes\" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Resource Include="Resources\Images\CookCSharp.ico" />
-    <Resource Include="Resources\Images\CookCSharp.png" />
-  </ItemGroup>
+    <ItemGroup>
+        <Resource Include="Resources\Images\CookCSharp.ico" />
+        <Resource Include="Resources\Images\CookCSharp.png" />
+    </ItemGroup>
 
 </Project>
