增加Interop帮助方法

--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -84,4 +84,8 @@
         <Resource Include="Resources\Images\CookCSharp.png" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Communal\Internal\" />
+    </ItemGroup>
+
 </Project>
