--- a/TestDemo/TestDemo.csproj
+++ b/TestDemo/TestDemo.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Gif\programmer.gif" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CookPopularControl\CookPopularControl.csproj" />
   </ItemGroup>
 
@@ -19,6 +23,10 @@
     <Reference Include="MaterialDesignThemes.Wpf">
       <HintPath>..\..\MaterialDesignInXamlToolkit\MaterialDesignThemes.Wpf\bin\Debug\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Gif\programmer.gif" />
   </ItemGroup>
 
 </Project>
