--- a/TestDemo/TestDemo.csproj
+++ b/TestDemo/TestDemo.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="Resources\Gif\programmer.gif" />
+    <None Remove="Resources\Gif\tomcat.jpg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +28,7 @@
 
   <ItemGroup>
     <Resource Include="Resources\Gif\programmer.gif" />
+    <Resource Include="Resources\Gif\tomcat.jpg" />
   </ItemGroup>
 
 </Project>
