--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,6 @@ dotnet_diagnostic.CA1416.severity = silent
 
 # CS8618: 在退出构造函数时，不可为 null 的字段必须包含非 null 值。请考虑声明为可以为 null。
 dotnet_diagnostic.CS8618.severity = silent
+
+# CS0809: 过时成员重写未过时成员
+dotnet_diagnostic.CS0809.severity = silent
