--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -55,6 +55,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
+      <PackageReference Include="System.ValueTuple" Version="4.5.0" />
       <PackageReference Include="XamlAnimatedGif" Version="2.0.0-alpha.1" />
     </ItemGroup>
 
