增加密码验证功能

--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -92,6 +92,7 @@
 
     <ItemGroup>
       <Folder Include="Communal\Internal\" />
+      <Folder Include="Controls\Templates\" />
     </ItemGroup>
 
 </Project>
