--- a/TestDemo/TestDemo.csproj
+++ b/TestDemo/TestDemo.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="HandyControl" Version="3.0.0" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.0.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.3.2" />
   </ItemGroup>
 
