--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -93,6 +93,7 @@
     <ItemGroup>
       <Folder Include="Communal\Internal\" />
       <Folder Include="Controls\Templates\" />
+      <Folder Include="Controls\Lists\" />
     </ItemGroup>
 
 </Project>
