--- a/TestDemo/TestDemo.csproj
+++ b/TestDemo/TestDemo.csproj
@@ -1,44 +1,45 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-      <TargetFrameworks>net461;net5.0-windows</TargetFrameworks>
-      <UseWPF>true</UseWPF>
-      <UseWindowsForms>true</UseWindowsForms>
-      <LangVersion>9.0</LangVersion>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>WinExe</OutputType>
+        <TargetFrameworks>net461;net5.0-windows</TargetFrameworks>
+        <UseWPF>true</UseWPF>
+        <UseWindowsForms>true</UseWindowsForms>
+        <LangVersion>9.0</LangVersion>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Resources\Gif\programmer.gif" />
-    <None Remove="Resources\Gif\timg.jpg" />
-    <None Remove="Resources\Gif\tomcat.jpg" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Remove="Resources\Gif\programmer.gif" />
+        <None Remove="Resources\Gif\timg.jpg" />
+        <None Remove="Resources\Gif\tomcat.jpg" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="HandyControl" Version="3.1.0" />
-    <PackageReference Include="MaterialDesignThemes" Version="4.0.0" />
-    <PackageReference Include="PropertyChanged.Fody" Version="3.3.2" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="6.0.0-preview.2.21154.6" />
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0-preview.2.21154.6" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="HandyControl" Version="3.1.0" />
+        <PackageReference Include="MaterialDesignThemes" Version="4.0.0" />
+        <PackageReference Include="PropertyChanged.Fody" Version="3.3.3" />
+        <PackageReference Include="System.ComponentModel.Annotations" Version="6.0.0-preview.2.21154.6" />
+        <PackageReference Include="System.Drawing.Common" Version="6.0.0-preview.2.21154.6" />
+        <PackageReference Include="ZXing.Net" Version="0.16.6" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\CookPopularControl\CookPopularControl.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\CookPopularControl\CookPopularControl.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="MaterialDesignColors">
-      <HintPath>..\..\MaterialDesignInXamlToolkit\MaterialDesignThemes.Wpf\bin\Debug\net45\MaterialDesignColors.dll</HintPath>
-    </Reference>
-    <Reference Include="MaterialDesignThemes.Wpf">
-      <HintPath>..\..\MaterialDesignInXamlToolkit\MaterialDesignThemes.Wpf\bin\Debug\net45\MaterialDesignThemes.Wpf.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+    <ItemGroup>
+        <Reference Include="MaterialDesignColors">
+            <HintPath>..\..\MaterialDesignInXamlToolkit\MaterialDesignThemes.Wpf\bin\Debug\net45\MaterialDesignColors.dll</HintPath>
+        </Reference>
+        <Reference Include="MaterialDesignThemes.Wpf">
+            <HintPath>..\..\MaterialDesignInXamlToolkit\MaterialDesignThemes.Wpf\bin\Debug\net45\MaterialDesignThemes.Wpf.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 
-  <ItemGroup>
-    <Resource Include="Resources\Gif\programmer.gif" />
-    <Resource Include="Resources\Gif\timg.jpg" />
-    <Resource Include="Resources\Gif\tomcat.jpg" />
-  </ItemGroup>
+    <ItemGroup>
+        <Resource Include="Resources\Gif\programmer.gif" />
+        <Resource Include="Resources\Gif\timg.jpg" />
+        <Resource Include="Resources\Gif\tomcat.jpg" />
+    </ItemGroup>
 
 </Project>
