--- a/TestDemo/TestDemo.csproj
+++ b/TestDemo/TestDemo.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <None Remove="Resources\Gif\C.png" />
         <None Remove="Resources\Gif\programmer.gif" />
         <None Remove="Resources\Gif\timg.jpg" />
         <None Remove="Resources\Gif\tomcat.jpg" />
@@ -37,6 +38,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Resource Include="Resources\Gif\C.png" />
         <Resource Include="Resources\Gif\programmer.gif" />
         <Resource Include="Resources\Gif\timg.jpg" />
         <Resource Include="Resources\Gif\tomcat.jpg" />
