--- a/TestDemo/TestDemo.csproj
+++ b/TestDemo/TestDemo.csproj
@@ -6,6 +6,7 @@
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
         <LangVersion>9.0</LangVersion>
+        <ApplicationIcon>CookCSharp.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
