Effect And Fixed some bug

--- a/TestDemo/TestDemo.csproj
+++ b/TestDemo/TestDemo.csproj
@@ -35,7 +35,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Resources\DemoImages\" />
+      <Folder Include="Resources\Effect\" />
     </ItemGroup>
 
 </Project>
