--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -6,11 +6,12 @@
         <OutputType>Library</OutputType>
         <Nullable>enable</Nullable>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-        <Version>1.0.0.2-alpha02</Version>
+        <Version>1.0.0.1-alpha03</Version>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageProjectUrl>https://github.com/chancezheng/CookPopularControl</PackageProjectUrl>
         <ApplicationIcon>Resources\Images\CookCSharp.ico</ApplicationIcon>
         <PackageIcon>CookCSharp.png</PackageIcon>
+        <PackageTags>xaml,wpf,ui,controls,windows,desktop</PackageTags>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net5.0-windows|AnyCPU'">
