--- a/.editorconfig
+++ b/.editorconfig
@@ -35,3 +35,6 @@ csharp_style_unused_value_assignment_preference = unused_local_variable
 
 # CS8625: 无法将 null 文本转换为不可为 null 的引用类型。
 dotnet_diagnostic.CS8625.severity = none
+
+# CS8632: 只能在 "#nullable" 注释上下文内的代码中使用可为 null 的引用类型的注释。
+dotnet_diagnostic.CS8632.severity = none
