Alter GroupControls'Name  for Groups

--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -121,4 +121,8 @@
         <Resource Include="Resources\Images\MediaPlayerBackground.png" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controls\Others\" />
+    </ItemGroup>
+
 </Project>
