--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          REPOSITORY: <chancezheng/chancezheng>
-          SHOW_TITLE: true
+          # GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          # REPOSITORY: <chancezheng/chancezheng>
+          # SHOW_TITLE: true
