--- a/.editorconfig
+++ b/.editorconfig
@@ -38,3 +38,6 @@ dotnet_diagnostic.CS8625.severity = none
 
 # CS8632: 只能在 "#nullable" 注释上下文内的代码中使用可为 null 的引用类型的注释。
 dotnet_diagnostic.CS8632.severity = none
+
+# CS8604: 可能的 null 引用参数。
+dotnet_diagnostic.CS8604.severity = none
