--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -83,6 +83,7 @@
       <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
       <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
       <PackageReference Include="QRCoder" Version="1.4.1" />
+      <PackageReference Include="System.ComponentModel.Composition" Version="5.0.0" />
       <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
       <PackageReference Include="System.ValueTuple" Version="4.5.0" />
       <PackageReference Include="XamlAnimatedGif" Version="2.0.0" />
