--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,7 +6,7 @@
         <!--<BaseIntermediateOutputPath>$(SolutionDir)Output\obj\$(Platform)</BaseIntermediateOutputPath>-->
         <IntermediateOutputPath>$(SolutionDir)Output\obj\$(Configuration)\$(ProjectName)</IntermediateOutputPath>
         <UseHostCompilerIfAvailable>false</UseHostCompilerIfAvailable>
-        <TargetFrameworks>net461;net5.0-windows</TargetFrameworks>
+        <TargetFrameworks>net46;net461;net5.0-windows</TargetFrameworks>
         <Platforms>AnyCPU;x64;x86</Platforms>
         <LangVersion>9.0</LangVersion>
         <!--指示编译器是否应为相同的输入产生相同的程序集-->
