--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -19,7 +19,9 @@
 
         <!--CookPopularControl Nuget包说明配置 $(MSBuildToolsPath)-->
         <PackageId>$(MSBuildProjectName)</PackageId>
-        <Version>1.0.1.1-alpha2</Version>
+        <!--预发行版以时间为后缀-->
+        <Version>1.0.1.1-dev-20211108</Version>
+        <!--<Version>1.0.1.1-alpha02</Version>-->
         <Authors>写代码的厨子</Authors>
         <Company>写代码的厨子</Company>
         <Product>$(MSBuildProjectName)</Product>
